--- a/docs/out_ptr/reference/out_ptr.adoc
+++ b/docs/out_ptr/reference/out_ptr.adoc
@@ -13,7 +13,8 @@
 [[ref.out_ptr.function]]
 ### function template `phd::out_ptr::out_ptr`
 
-```
+[source, cpp]
+----
 namespace phd { namespace out_ptr {
 
 	template <class Pointer, class Smart, class... Args>
@@ -22,8 +23,8 @@ namespace phd { namespace out_ptr {
 	template <class Smart, class... Args>
 	out_ptr<Smart, POINTER_OF(Smart), Args...> out_ptr(Smart& s, Args&&... args) noexcept;
 
-}}
-```
+----
+----
 
 - Effects:
 * The first overload is Equivalent to: `return out_ptr_t<Smart, Pointer, Args...>(s, std::forward<Args>(args)...);`
@@ -32,8 +33,9 @@ namespace phd { namespace out_ptr {
 
 [[ref.inout_ptr.traits]]
 ### class template `phd::out_ptr::out_ptr_traits`
-
-```
+----
+[source, cpp]
+----
 namespace phd { namespace out_ptr {
 
 	template <class Pointer, class Smart>
@@ -51,9 +53,9 @@ namespace phd { namespace out_ptr {
 		template <typename... Args>
 		static void reset(Smart& s, pointer& p, Args&&... args) noexcept;
 	};
-
+----
 }}
-```
+----
 
 ### Member Types
 
@@ -94,9 +96,10 @@ NOTE: This allows special smart pointers (e.g., a `shared_ptr`-like type) to pre
 
 
 [[ref.out_ptr.class]]
-### class template `phd::out_ptr::out_ptr_t`
+---- class template `phd::out_ptr::out_ptr_t`
 
-```
+[source, cpp]
+----
 namespace phd { namespace out_ptr {
 
 	template <class Smart, class Pointer, class... Args>
@@ -118,10 +121,10 @@ namespace phd { namespace out_ptr {
 		Smart* s; // exposition only
 		tuple<Args...> a; // exposition only
 		pointer p; // exposition only
-	};
+----
 	
 }}
-```
+----
 
 IMPORTANT: If `Smart` is a specialization of `std::shared_ptr` or `boost::shared_ptr`; and, `sizeof...(Args) == 0`, the program is ill-formed. `Pointer` shall meet the http://eel.is/c++draft/nullablepointer.requirements[`Cpp17NullablePointer` requirements [*nullablepointer.requirements*]], unless this type is program specialized.
 
@@ -145,16 +148,17 @@ NOTE: It is typically a user error to reset a `shared_ptr` without specifying a 
 
 ### Assignment
 
-`out_ptr_t& operator=(out_ptr&& rhs) noexcept;`
+----t_ptr_t& operator=(out_ptr&& rhs) noexcept;`
 
 - Effects: Equivalent to:
-```
+[source, cpp]
+----
 s = std::move(rhs.s); 
-a = std::move(rhs.a); 
+---- std::move(rhs.a); 
 p = std::move(rhs.p);
 rhs.s = nullptr;
 return *this;
-```
+----
 
 
 ### Destructors
