📝 Clean up the names
- Fix up the funding.yml by letting it default to the base account

--- a/docs/out_ptr/rationale.adoc
+++ b/docs/out_ptr/rationale.adoc
@@ -17,7 +17,7 @@
 [[rationale]]
 # Rationale
 
-Below is the rationale for the design. Most of this rationale can also be found in https://thephd.github.io/vendor/future_cxx/papers/d1132.html[p1132 - std::out_ptr].
+Below is the rationale for the design. Most of this rationale can also be found in https://theztd.github.io/vendor/future_cxx/papers/d1132.html[p1132 - std::out_ptr].
 
 
 ## It is tedious to manage lifetime with smart pointers and C functions
