--- a/docs/out_ptr/examples.adoc
+++ b/docs/out_ptr/examples.adoc
@@ -54,7 +54,7 @@ using zop = ztd::out_ptr;
 
 size_t& size_ref = p_obj.get_deleter().size;
 std::unique_ptr<Interface, SizedDeleter> obj;
-int ret = CreateBusInterface(..., pop::out_ptr(obj), &size_ref);
+int ret = CreateBusInterface(..., zop::out_ptr(obj), &size_ref);
 if (ret != 0) {
      throw std::runtime_error("deep sadness");
 }
@@ -89,7 +89,7 @@ using zop = ztd::out_ptr;
 
 std::unique_ptr<Numf, DoFree> upNumf;
 /* some work... */
-int ret = posix_memalign(pop::out_ptr<void*>(upNumf), 64, nNumf);
+int ret = posix_memalign(zop::out_ptr<void*>(upNumf), 64, nNumf);
 if (ret != 0) {
      throw std::runtime_error("something went wrong and posix_memalign failed!");
 }
