--- a/docs/out_ptr.adoc
+++ b/docs/out_ptr.adoc
@@ -1,10 +1,10 @@
-// Copyright ⓒ 2018-2022 ThePhD.
+// Copyright ⓒ 2018-2023 ThePhD.
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
 //
-//     http://www.apache.org/licenses/LICENSE-2.0
+// https://www.apache.org/licenses/LICENSE-2.0
 //
 // Unless required by applicable law or agreed to in writing, software
 // distributed under the License is distributed on an "AS IS" BASIS,
@@ -147,4 +147,4 @@ This documentation is
 
 * Copyright ⓒ 2021 ThePhD
 
-and is distributed under the http://www.apache.org/licenses/LICENSE-2.0[Apache 2.0 License].
+and is distributed under the https://www.apache.org/licenses/LICENSE-2.0[Apache 2.0 License].
